[#405][BACK][도서] - 출판사 테스트코드 작성
* feat(book): 테스트코드 작성

* feat(book): 출판사 테스트코드 작성

* feat(book): 출판사 테스트코드 작성

---------

Co-authored-by: marf3927 <marf3927@gmail.com>